client/stylus/css/screen.styl
/*RESETS*/

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video
    margin 0
    padding 0
    border 0
    outline 0
    font-size 100%
    vertical-align baseline
    background transparent


article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section
    display block

nav ul
    list-style none

blockquote, q
    quotes none

blockquote:before, blockquote:after,
q:before, q:after
    content ''
    content none

a
    margin 0
    padding 0
    font-size 100%
    vertical-align baseline
    background transparent

ins
    background-color #ff9
    color #000
    text-decoration none

mark
    background-color #ff9
    color #000
    font-style italic
    font-weight bold

del
    text-decoration line-through

abbr[title], dfn[title]
    border-bottom 1px dotted
    cursor help

table
    border-collapse collapse
    border-spacing 0

hr
    display block
    height 1px
    border 0
    border-top 1px solid #ccc
    margin 1em 0
    padding 0

input, select
    vertical-align baseline

/* VISUAL STYLES */

body
    font: 75%/1.5 Helvetica, Arial, sans-serif
    color: #444
    @css {
        background-image: -webkit-gradient(
            linear,
            left 119,
            left 127,
            from(#CCCCCC),
            to(#FFFFFF));
        background-image: -moz-linear-gradient(
            center 119,
            #CCCCCC 0%,
            #FFFFFF 100%);
        background-image: -o-linear-gradient(
            center 119, #fff 0%, #ececec 100%);
    }

a
    color #377ea7
    text-decoration none
    outline none
    &:focus
    &:hover
    &:active
        text-decoration underline
    &.external
    &.mailto
        background-color transparent
        background-repeat no-repeat
        background-position right 1px
    &.external
        background-image url('../img/external_icon.png')
        padding-right 15px
        :hover
            background-image url('../img/external_icon_hover.png')
    &.mailto
        background-image url('../img/mailto_icon.png')
        padding-right 20px
        :hover
            background-image url('../img/mailto_icon_hover.png')
    &.show_source
        background transparent no-repeat 0 0 url('../img/show_source.png')
        width 13px
        height 14px
        display inline-block
        text-indent 9999px


h1,h2,h3
    font-weight bold

h1
    font-size 2em
    line-height 1em
    margin-bottom 0.75em
    padding-top 0.25em
    text-shadow 1px 1px 1px #fff
    em
        font-style normal
        color #909090

h1.page_divider
    font-size 2.5em
    background-color #f7f7f7
    padding .8em 2.5%
    border-top 1px solid #d1d1d1
    @css {
        background-image: -webkit-gradient(
            linear,
            left 0,
            left 10,
            from(#dfdfdf),
            to(#f7f7f7));
        background-image: -moz-linear-gradient(
            center 0,
            #dfdfdf 0%,
            #f7f7f7 5%);
        background-image: -o-linear-gradient
            center 0,
            #dfdfdf 0%,
            #f7f7f7 5%);
    }
/* ... */

